@@ -720,13 +720,13 @@ arm_prepare_to_resume (struct lwp_info *lwp)
 
 	if (arm_hwbp_control_is_enabled (proc_info->bpts[i].control))
 	  if (ptrace (PTRACE_SETHBPREGS, pid,
-		      (PTRACE_ARG3_TYPE) ((i << 1) + 1),
+		      (PTRACE_TYPE_ARG3) ((i << 1) + 1),
 		      &proc_info->bpts[i].address) < 0)
 	    perror_with_name ("Unexpected error setting breakpoint address");
 
 	if (arm_hwbp_control_is_initialized (proc_info->bpts[i].control))
 	  if (ptrace (PTRACE_SETHBPREGS, pid,
-		      (PTRACE_ARG3_TYPE) ((i << 1) + 2),
+		      (PTRACE_TYPE_ARG3) ((i << 1) + 2),
 		      &proc_info->bpts[i].control) < 0)
 	    perror_with_name ("Unexpected error setting breakpoint");
 
@@ -740,13 +740,13 @@ arm_prepare_to_resume (struct lwp_info *lwp)
 
 	if (arm_hwbp_control_is_enabled (proc_info->wpts[i].control))
 	  if (ptrace (PTRACE_SETHBPREGS, pid,
-		      (PTRACE_ARG3_TYPE) -((i << 1) + 1),
+		      (PTRACE_TYPE_ARG3) -((i << 1) + 1),
 		      &proc_info->wpts[i].address) < 0)
 	    perror_with_name ("Unexpected error setting watchpoint address");
 
 	if (arm_hwbp_control_is_initialized (proc_info->wpts[i].control))
 	  if (ptrace (PTRACE_SETHBPREGS, pid,
-		      (PTRACE_ARG3_TYPE) -((i << 1) + 2),
+		      (PTRACE_TYPE_ARG3) -((i << 1) + 2),
 		      &proc_info->wpts[i].control) < 0)
 	    perror_with_name ("Unexpected error setting watchpoint");
 
