@@ -22,8 +22,8 @@
 #include "gdbthread.h"
 #include "gdb_proc_service.h"
 
-#define PTRACE_ARG3_TYPE void *
-#define PTRACE_ARG4_TYPE void *
+#define PTRACE_TYPE_ARG3 void *
+#define PTRACE_TYPE_ARG4 void *
 #define PTRACE_XFER_TYPE long
 
 #ifdef HAVE_LINUX_REGSETS
